syntax = "proto3";

option csharp_namespace = "SalesServiceGrpc.Protos";

import "Protos/SharedGrpc.proto";
package SalesServiceGrpc;

service ISalesService
{
 rpc FindMatch (PurchaseOffer) returns (SharedGrpc.MatchResponse);
}

message PurchaseOffer {
    int32 StockId = 1;
    int32 Amount = 2;
    float Price = 3;
    int32 UserId = 4;
}

